pets by userID fix
